--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,8 @@ buildscript {
     repositories {
         flatDir {
             name 'localRepository'
-            dir "hellodsl/localRepository/libs"
+//            dir "hellodsl/localRepository/libs"
+            dir "complexscriptdsl/localRepository/libs"
         }
         mavenLocal()
         google()
@@ -13,9 +14,12 @@ buildscript {
     }
     dependencies {
 //        classpath "com.plugintest: hellodsl:1.0.0"
-        classpath(group:'com.plugintest',name:'hellodsl',version: '1.0.0') {
-            changing = true
-        }
+//        classpath(group:'com.plugintest',name:'hellodsl',version: '1.0.0') {
+//            changing = true
+//        }
+//        classpath(group:'com.dev.complexdsl',name:'complexscriptdsl',version: '1.0') {
+//            changing = true
+//        }
         classpath 'com.android.tools.build:gradle:3.1.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
