--- a/build.gradle
+++ b/build.gradle
@@ -17,9 +17,9 @@ buildscript {
 //        classpath(group:'com.plugintest',name:'hellodsl',version: '1.0.0') {
 //            changing = true
 //        }
-//        classpath(group:'com.dev.complexdsl',name:'complexscriptdsl',version: '1.0') {
-//            changing = true
-//        }
+        classpath(group:'com.dev.complexdsl',name:'complexscriptdsl',version: '1.0') {
+            changing = true
+        }
         classpath 'com.android.tools.build:gradle:3.1.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
