--- a/learntranform/build.gradle
+++ b/learntranform/build.gradle
@@ -1,8 +1,20 @@
-apply plugin: 'java-library'
+apply plugin: 'groovy'
+apply plugin: 'java'
+apply plugin: 'maven'
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    compile gradleApi()
+    compile localGroovy()
 }
 
-sourceCompatibility = "7"
-targetCompatibility = "7"
+group = 'com.learntranform'
+version = '1.0.0'
+uploadArchives {
+    repositories {
+        flatDir {
+            name "localRepository"
+            dir "../app/localRepository/libs"
+        }
+    }
+}
+
