@feat  :wrench: 更新ignore文件

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':hellodsl', ':complexscriptdsl', ':learntranform'
+include ':app', ':hellodsl', ':complexscriptdsl', ':learntransform'
