--- a/build.gradle
+++ b/build.gradle
@@ -12,11 +12,10 @@ buildscript {
         google()
     }
     dependencies {
-//        classpath "com.plugintest: hellodsl:1.0.0"
         classpath(group: 'com.plugintest', name: 'hellodsl', version: '1.0.0') {
             changing = true
         }
-//        classpath(group:'com.dev.complexdsl',name:'complexscriptdsl',version: '1.0') {
+//        classpath(group: 'com.learntranform', name: 'learntransform', version: '1.0.0') {
 //            changing = true
 //        }
         classpath 'com.android.tools.build:gradle:3.1.2'
