--- a/build.gradle
+++ b/build.gradle
@@ -15,9 +15,9 @@ buildscript {
         classpath(group: 'com.plugintest', name: 'hellodsl', version: '1.0.0') {
             changing = true
         }
-//        classpath(group: 'com.learntranform', name: 'learntransform', version: '1.0.0') {
-//            changing = true
-//        }
+        classpath(group: 'com.learntransform', name: 'learntransform', version: '1.0.1') {
+            changing = true
+        }
         classpath 'com.android.tools.build:gradle:3.1.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.novoda:bintray-release:0.8.0' //jcenter添加
