--- a/learntransform/build.gradle
+++ b/learntransform/build.gradle
@@ -1,14 +1,18 @@
 apply plugin: 'groovy'
 apply plugin: 'java'
-apply plugin: 'maven'
+
 
 dependencies {
-    compile gradleApi()
-    compile localGroovy()
+    implementation gradleApi()
+    implementation localGroovy()
+    //build tools
+    implementation 'com.android.tools.build:gradle:3.1.2'
+    implementation 'org.javassist:javassist:3.20.0-GA'
+
 }
 
 group = 'com.learntranform'
-version = '1.0.0'
+version = '1.0.1'
 uploadArchives {
     repositories {
         flatDir {
