--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,6 +85,11 @@ bookManager {
 }
 
 
+//taskExecTime {
+//    threshold 100
+//    sorted true
+//}
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
