--- a/app/build.gradle
+++ b/app/build.gradle
@@ -97,6 +97,8 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    implementation 'org.javassist:javassist:3.20.0-GA'
+
 }
 
 
@@ -159,6 +161,11 @@ class SayHelloTask extends DefaultTask {
     @TaskAction
     void sayHello() {
         System.out.println "Hello $username ! age is $age"
+    }
+
+    @TaskAction
+    void saywelcome(){
+        System.out.println "Welcome $username ! age is $age"
     }
 }
 
